# Platzbelegung

./: .gitignore  .htaccess  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  backend.php  config.yaml  deploy.example.env  package-lock.json  package.json  parse_matchplan.php  pyproject.toml  server.js  start.sh
.github/: ISSUES_TO_CREATE.md
.github/workflows/: create-issues.yml
docs/: logo-extraction.md  strategie-vergangene-spiele.md  training-source-agent.md  venue-pages-unreliable.md
docs/issues/: 2026-04-07-team-grouping-und-sg-dedup.md
public/: admin.html  admin.js  app.js  index.html  style.css
scripts/: create_issues.py  deploy.sh  release.sh
src/platzbelegung/: __init__.py  agent_interface.py  api_client.py  config.py  display.py  main.py  models.py  parse_matchplan.php  parser.py  past_games_strategy.py  render_html.py  scraper.py  storage.py  training_scraper.py
src/platzbelegung/templates/: occupancy.html.j2
tests/: server.test.js  test_api_client.py  test_display.py  test_parser.py  test_past_games_strategy.py  test_render_html.py  test_scraper.py  test_storage.py  test_training_scraper.py
tests/php/: test_api_demo.php  test_parse_matchplan_cli.php
