[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platzbelegung"
version = "0.1.0"
description = "Fußball-Platzbelegungs-Übersicht – liest Daten von fussball.de aus und stellt die Belegung von Sportplätzen übersichtlich dar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.scripts]
platzbelegung = "platzbelegung.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
